# testing-samples

./: .bazelrc  .gitignore  .travis.yml  BUILD.bazel  CODEOWNERS  CONTRIB.md  CONTRIBUTING.md  README.md  Stamp_Version_1  WORKSPACE  build.gradle  buildspec.yml  code (1).txt  common_defs.bzl  dummy file  projects.conf  renovate.json  settings.gradle  test_all.sh  test_all_ftl.sh  update_versions.sh
.github/: ci-gradle.properties
native/GTestExample/app/src/main/cpp/: CMakeLists.txt
ui/espresso/AccessibilitySample/: BUILD.bazel  build.gradle
ui/espresso/AccessibilitySample/app/: build.gradle
ui/espresso/AccessibilitySample/app/src/androidTest/: AndroidManifest.xml
ui/espresso/AccessibilitySample/app/src/main/: AndroidManifest.xml  AppManifest.xml
ui/espresso/AccessibilitySample/app/src/main/res/layout/: activity_main.xml
ui/espresso/AccessibilitySample/app/src/main/res/values/: strings.xml
ui/espresso/AccessibilitySample/gradle/wrapper/: gradle-wrapper.properties
ui/espresso/BasicSample/: BUILD.bazel  README.md  build.gradle  gradle.properties
ui/espresso/BasicSample/app/: build.gradle
ui/espresso/BasicSample/app/src/androidTest/: AndroidManifest.xml
ui/espresso/BasicSample/app/src/main/: AndroidManifest.xml  AppManifest.xml
ui/espresso/BasicSample/app/src/main/res/values-v13/: styles.xml
ui/espresso/BasicSample/gradle/wrapper/: gradle-wrapper.properties
ui/espresso/CustomMatcherSample/: BUILD.bazel  README.md  build.gradle  gradle.properties
ui/espresso/CustomMatcherSample/app/: build.gradle
ui/espresso/CustomMatcherSample/app/src/androidTest/: AndroidManifest.xml
ui/espresso/CustomMatcherSample/app/src/main/: AndroidManifest.xml  AppManifest.xml
ui/espresso/CustomMatcherSample/app/src/main/res/drawable/: incorrect.xml
ui/espresso/CustomMatcherSample/app/src/main/res/values/: dimens.xml
ui/espresso/CustomMatcherSample/gradle/wrapper/: gradle-wrapper.properties
ui/espresso/DataAdapterSample/: BUILD.bazel  README.md  build.gradle  gradle.properties
ui/espresso/DataAdapterSample/app/: build.gradle
ui/espresso/DataAdapterSample/app/src/androidTest/: AndroidManifest.xml
ui/espresso/DataAdapterSample/app/src/main/: AndroidManifest.xml  AppManifest.xml
ui/espresso/DataAdapterSample/app/src/main/res/layout/: list_activity.xml  list_item.xml
ui/espresso/DataAdapterSample/app/src/main/res/values/: dimens.xml  strings.xml  styles.xml
ui/espresso/DataAdapterSample/gradle/wrapper/: gradle-wrapper.properties
ui/espresso/EspressoDeviceSample/: BUILD.bazel  README.md  build.gradle  gradle.properties
ui/espresso/EspressoDeviceSample/app/: build.gradle
ui/espresso/EspressoDeviceSample/app/src/androidTest/: AndroidManifest.xml
ui/espresso/EspressoDeviceSample/app/src/main/: AndroidManifest.xml  AppManifest.xml
ui/espresso/EspressoDeviceSample/app/src/main/res/layout/: activity_main.xml
ui/espresso/EspressoDeviceSample/app/src/main/res/values/: strings.xml
ui/espresso/EspressoDeviceSample/gradle/wrapper/: gradle-wrapper.properties
ui/espresso/IdlingResourceSample/: BUILD.bazel  README.md  build.gradle  gradle.properties  settings.gradle
ui/espresso/IdlingResourceSample/app/: build.gradle
ui/espresso/IdlingResourceSample/app/src/androidTest/: AndroidManifest.xml
ui/espresso/IdlingResourceSample/app/src/main/: AndroidManifest.xml  AppManifest.xml
ui/espresso/IdlingResourceSample/app/src/main/res/layout/: activity_main.xml
ui/espresso/IdlingResourceSample/app/src/main/res/values/: dimens.xml  strings.xml  styles.xml
ui/espresso/IdlingResourceSample/gradle/wrapper/: gradle-wrapper.properties
ui/espresso/IntentsAdvancedSample/: BUILD.bazel  README.md  build.gradle
ui/espresso/IntentsAdvancedSample/app/: build.gradle
ui/espresso/IntentsAdvancedSample/app/src/androidTest/: AndroidManifest.xml
ui/espresso/IntentsAdvancedSample/app/src/main/: AndroidManifest.xml  AppManifest.xml
ui/espresso/IntentsAdvancedSample/app/src/main/res/layout/: activity_image_viewer.xml
ui/espresso/IntentsAdvancedSample/app/src/main/res/values/: strings.xml
ui/espresso/IntentsAdvancedSample/app/src/main/res/values-v21/: styles.xml
ui/espresso/IntentsAdvancedSample/gradle/wrapper/: gradle-wrapper.properties
ui/espresso/IntentsBasicSample/: BUILD.bazel  README.md  build.gradle  gradle.properties
ui/espresso/IntentsBasicSample/app/: build.gradle
ui/espresso/IntentsBasicSample/app/src/androidTest/: AndroidManifest.xml
ui/espresso/IntentsBasicSample/app/src/main/: AndroidManifest.xml  AppManifest.xml  EmptyManifest.xml
ui/espresso/IntentsBasicSample/app/src/main/res/layout/: activity_dialer.xml
ui/espresso/IntentsBasicSample/app/src/main/res/values/: strings.xml
ui/espresso/IntentsBasicSample/gradle/wrapper/: gradle-wrapper.properties
ui/espresso/MultiWindowSample/: .gitignore  BUILD.bazel  README.md  build.gradle
ui/espresso/MultiWindowSample/app/: build.gradle
ui/espresso/MultiWindowSample/app/src/androidTest/: AndroidManifest.xml
ui/espresso/MultiWindowSample/app/src/main/: AndroidManifest.xml  AppManifest.xml  EmptyManifest.xml
ui/espresso/MultiWindowSample/gradle/wrapper/: gradle-wrapper.properties
ui/espresso/RecyclerViewSample/: BUILD.bazel  README.md  build.gradle  gradle.properties
ui/espresso/RecyclerViewSample/app/: build.gradle
ui/espresso/RecyclerViewSample/app/src/androidTest/: AndroidManifest.xml
ui/espresso/RecyclerViewSample/app/src/main/: AndroidManifest.xml  AppManifest.xml
ui/espresso/RecyclerViewSample/gradle/wrapper/: gradle-wrapper.properties
ui/uiautomator/BasicSample/: BUILD.bazel  README.md  build.gradle
ui/uiautomator/BasicSample/app/: build.gradle
ui/uiautomator/BasicSample/app/src/androidTest/: AndroidManifest.xml
ui/uiautomator/BasicSample/app/src/main/: AndroidManifest.xml  AppManifest.xml  EmptyManifest.xml
ui/uiautomator/BasicSample/gradle/wrapper/: gradle-wrapper.properties
unit/BasicNativeAndroidTest/app/src/main/cpp/: CMakeLists.txt
unit/BasicNativeAndroidTest/app/src/main/cpp/include/: adder
unit/BasicNativeAndroidTest/app/src/main/cpp/test/: adder_test.cpp
(+484 files in other folders)
