licenses(["notice"])  # Apache 2.0

load("//:common_defs.bzl", "minSdkVersion", "targetSdkVersion")
load("@rules_jvm_external//:defs.bzl", "artifact")

android_library(
    name = "BasicSampleLib",
    srcs = glob(["app/src/main/**/*.java"]),
    custom_package = "com.example.android.testing.espresso.AccessibilitySample",
    manifest = "app/src/main/AndroidManifest.xml",
    resource_files = glob(["app/src/main/res/**/*"]),
    deps = [
        artifact("com.google.guava:guava")
    ],
)

android_binary(
    name = "BasicSample",
    custom_package = "com.example.android.testing.espresso.AccessibilitySample",
    manifest = "app/src/main/AppManifest.xml",
    manifest_values = {
        "minSdkVersion": minSdkVersion,
        "targetSdkVersion": targetSdkVersion,
    },
    deps = [":BasicSampleLib"],
)

android_library(
    name = "BasicSampleTestLib",
    srcs = glob(["app/src/androidTest/**/*.java"]),
    custom_package = "com.example.android.testing.espresso.AccessibilitySample.test",
    deps = [
        artifact("androidx.viewpager:viewpager"),
        artifact("androidx.test.espresso:espresso-accessibility"),
        artifact("com.google.android.apps.common.testing.accessibility.framework:accessibility-test-framework"),
        ":BasicSampleLib",
        "//:test_deps",
    ],
)

android_binary(
    name = "BasicSampleTest",
    custom_package = "com.example.android.testing.espresso.AccessibilitySample.test",
    instruments = ":BasicSample",
    manifest = "app/src/androidTest/AndroidManifest.xml",
    manifest_values = {
        "minSdkVersion": minSdkVersion,
        "targetSdkVersion": targetSdkVersion,
    },
    deps = [
        artifact("androidx.viewpager:viewpager"),
        artifact("androidx.test.espresso:espresso-accessibility"),
        artifact("com.google.android.apps.common.testing.accessibility.framework:accessibility-test-framework"),
        ":BasicSampleTestLib",
    ],
)

API_LEVELS = [
    "19_x86",
    "21_x86",
    "22_x86",
    "23_x86",
]

[android_instrumentation_test(
    name = "BasicSampleInstrumentationTest_%s" % API_LEVEL,
    target_device = "@android_test_support//tools/android/emulated_devices/generic_phone:android_%s_qemu2" % API_LEVEL,
    test_app = ":BasicSampleTest",
) for API_LEVEL in API_LEVELS]
