load("@gmaven_rules//:defs.bzl", "gmaven_artifact")

licenses(["notice"])  # Apache 2.0

android_library(
    name = "CustomMatcherSampleLib",
    srcs = glob(["app/src/main/**/*.java"]),
    custom_package = "com.example.android.testing.espresso.CustomMatcherSample",
    manifest = "app/src/main/AndroidManifest.xml",
    resource_files = glob(["app/src/main/res/**/*"]),
    deps = [
        gmaven_artifact("com.android.support:support-annotations:27.0.2"),
        "@com_google_guava_guava//jar",
    ],
)

android_binary(
    name = "CustomMatcherSample",
    custom_package = "com.example.android.testing.espresso.CustomMatcherSample",
    manifest = "app/src/main/AppManifest.xml",
    deps = [":CustomMatcherSampleLib"],
)

android_library(
    name = "CustomMatcherSampleTestLib",
    srcs = glob(["app/src/androidTest/**/*.java"]),
    custom_package = "com.example.android.testing.espresso.CustomMatcherSample",
    deps = [
        ":CustomMatcherSampleLib",
        "//:test_deps",
    ],
)

android_binary(
    name = "CustomMatcherSampleTest",
    custom_package = "com.example.android.testing.espresso.CustomMatcherSample",
    instruments = ":CustomMatcherSample",
    manifest = "app/src/androidTest/AndroidManifest.xml",
    deps = [":CustomMatcherSampleTestLib"],
)

android_instrumentation_test(
    name = "CustomMatcherSampleInstrumentationTest",
    target_device = "@android_test_support//tools/android/emulated_devices/generic_phone:android_23_x86_qemu2",
    test_app = ":CustomMatcherSampleTest",
)
