load("@gmaven_rules//:defs.bzl", "gmaven_artifact")

licenses(["notice"])  # Apache 2.0

android_library(
    name = "DataAdapterSampleLib",
    srcs = glob(["app/src/main/**/*.java"]),
    custom_package = "com.example.android.testing.espresso.DataAdapterSample",
    manifest = "app/src/main/AndroidManifest.xml",
    resource_files = glob(["app/src/main/res/**/*"]),
    deps = [
        gmaven_artifact("com.android.support:support-annotations:27.0.2"),
        "@com_google_guava_guava//jar",
    ],
)

android_binary(
    name = "DataAdapterSample",
    custom_package = "com.example.android.testing.espresso.DataAdapterSample",
    manifest = "app/src/main/AppManifest.xml",
    deps = [":DataAdapterSampleLib"],
)

android_library(
    name = "DataAdapterSampleTestLib",
    srcs = glob(["app/src/androidTest/**/*.java"]),
    custom_package = "com.example.android.testing.espresso.DataAdapterSample",
    deps = [
        ":DataAdapterSampleLib",
        "//:test_deps",
    ],
)

android_binary(
    name = "DataAdapterSampleTest",
    custom_package = "com.example.android.testing.espresso.DataAdapterSample",
    instruments = ":DataAdapterSample",
    manifest = "app/src/androidTest/AndroidManifest.xml",
    deps = [":DataAdapterSampleTestLib"],
)

android_instrumentation_test(
    name = "DataAdapterSampleInstrumentationTest",
    target_device = "@android_test_support//tools/android/emulated_devices/generic_phone:android_23_x86_qemu2",
    test_app = ":DataAdapterSampleTest",
)
