licenses(["notice"])  # Apache 2.0

load("//:common_defs.bzl", "minSdkVersion", "targetSdkVersion")
load("@rules_jvm_external//:defs.bzl", "artifact")

android_library(
    name = "EspressoDeviceBasicSampleLib",
    srcs = glob(["app/src/main/**/*.java"]),
    custom_package = "com.example.android.testing.espresso.EspressoDeviceBasicSample",
    manifest = "app/src/main/AndroidManifest.xml",
    resource_files = glob(["app/src/main/res/**/*"]),
    deps = [
        artifact("com.google.guava:guava")
    ],
)

android_binary(
    name = "EspressoDeviceBasicSample",
    custom_package = "com.example.android.testing.espresso.EspressoDeviceBasicSample",
    manifest = "app/src/main/AppManifest.xml",
    manifest_values = {
        "minSdkVersion": minSdkVersion,
        "targetSdkVersion": targetSdkVersion,
    },
    deps = [":BasicSampleLib"],
)

android_library(
    name = "EspressoDeviceBasicSampleTestLib",
    srcs = glob(["app/src/androidTest/**/*.java"]),
    custom_package = "com.example.android.testing.espresso.EspressoDeviceBasicSample.test",
    deps = [
        ":EspressoDeviceBasicSampleLib",
        "//:test_deps",
    ],
)

android_binary(
    name = "EspressoDeviceBasicSampleTest",
    custom_package = "com.example.android.testing.espresso.EspressoDeviceBasicSample.test",
    instruments = ":EspressoDeviceBasicSample",
    manifest = "app/src/androidTest/AndroidManifest.xml",
    manifest_values = {
        "minSdkVersion": minSdkVersion,
        "targetSdkVersion": targetSdkVersion,
    },
    deps = [":EspressoDeviceBasicSampleTestLib"],
)

API_LEVELS = [
    "19_x86",
    "21_x86",
    "22_x86",
    "23_x86",
]

[android_instrumentation_test(
    name = "EspressoDeviceBasicSampleInstrumentationTest_%s" % API_LEVEL,
    target_device = "@android_test_support//tools/android/emulated_devices/generic_phone:android_%s_qemu2" % API_LEVEL,
    test_app = ":EspressoDeviceBasicSampleTest",
) for API_LEVEL in API_LEVELS]
