load("@gmaven_rules//:defs.bzl", "gmaven_artifact")

licenses(["notice"])  # Apache 2.0

android_library(
    name = "IdlingResourceSampleLib",
    srcs = glob(["app/src/main/**/*.java"]),
    custom_package = "com.example.android.testing.espresso.IdlingResourceSample",
    manifest = "app/src/main/AndroidManifest.xml",
    resource_files = glob(["app/src/main/res/**/*"]),
    deps = [
        gmaven_artifact("com.android.support:support-annotations:27.0.2"),
        gmaven_artifact("com.android.support.test.espresso:espresso-idling-resource:aar:3.0.1"),
        "@com_google_guava_guava//jar",
    ],
)

android_binary(
    name = "IdlingResourceSample",
    custom_package = "com.example.android.testing.espresso.IdlingResourceSample",
    manifest = "app/src/main/AppManifest.xml",
    deps = [":IdlingResourceSampleLib"],
)

android_library(
    name = "IdlingResourceSampleTestLib",
    srcs = glob(["app/src/androidTest/**/*.java"]),
    custom_package = "com.example.android.testing.espresso.IdlingResourceSample",
    deps = [
        gmaven_artifact("com.android.support.test.espresso:espresso_idling_resource:aar:3.0.1"),
        ":IdlingResourceSampleLib",
        "//:test_deps",
    ],
)

android_binary(
    name = "IdlingResourceSampleTest",
    custom_package = "com.example.android.testing.espresso.IdlingResourceSample",
    instruments = ":IdlingResourceSample",
    manifest = "app/src/androidTest/AndroidManifest.xml",
    deps = [":IdlingResourceSampleTestLib"],
)

android_instrumentation_test(
    name = "IdlingResourceSampleInstrumentationTest",
    target_device = "@android_test_support//tools/android/emulated_devices/generic_phone:android_23_x86_qemu2",
    test_app = ":IdlingResourceSampleTest",
)
