android_library(
    name = "IntentsAdvancedSampleLib",
    srcs = glob(["app/src/main/**/*.java"]),
    custom_package = "com.example.android.testing.espresso.intents.AdvancedSample",
    manifest = "app/src/main/AndroidManifest.xml",
    resource_files = glob(["app/src/main/res/**/*"]),
    deps = [
        "@com_android_support_support_annotations_27_0_2//jar",
        "@com_google_guava_guava//jar",
    ],
)

android_binary(
    name = "IntentsAdvancedSample",
    custom_package = "com.example.android.testing.espresso.intents.AdvancedSample",
    manifest = "app/src/main/EmptyManifest.xml",
    deps = [":IntentsAdvancedSampleLib"],
)

android_library(
    name = "IntentsAdvancedSampleTestLib",
    srcs = glob(["app/src/androidTest/**/*.java"]),
    custom_package = "com.example.android.testing.espresso.intents.AdvancedSample",
    deps = [
        ":IntentsAdvancedSampleLib",
        "//:test_deps",
        "@com_android_support_test_espresso_espresso_intents_3_0_1//aar",
    ],
)

android_binary(
    name = "IntentsAdvancedSampleTest",
    custom_package = "com.example.android.testing.espresso.intents.AdvancedSample",
    instruments = ":IntentsAdvancedSample",
    manifest = "app/src/androidTest/AndroidManifest.xml",
    deps = [":IntentsAdvancedSampleTestLib"],
)

android_instrumentation_test(
    name = "IntentsAdvancedSampleInstrumentationTest",
    target_device = "@android_test_support//tools/android/emulated_devices/nexus_6:android_23_x86_qemu2",
    test_app = ":IntentsAdvancedSampleTest",
)
